Fixed focused link style on mobile

--- a/styles.css
+++ b/styles.css
@@ -438,6 +438,17 @@ h1, h2, h3 {
   text-decoration: underline;
 }
 
+@media (max-width: 480px) {
+  .nav a:focus {
+    color: #ffffff;
+    text-decoration: none;
+  }
+
+  .nav a:focus:hover {
+    color: #00c8b5;
+  }
+}
+
 .imgButton:focus {
   box-shadow: none;
 }
